--- a/plugin.xml
+++ b/plugin.xml
@@ -102,17 +102,19 @@
     <framework src="libz.dylib" weak="true" />
 
     <!-- Google frameworks -->
+    <preference name="GOOGLE_SIGN_IN_VERSION" default="~> 6.2.0"/>
+    <preference name="GOOGLE_UTILITIES_VERSION" default="~> 7.11.4"/>
     <podspec>
       <config>
         <source url="https://cdn.cocoapods.org/"/>
       </config>
       <pods use-frameworks="true">
-        <pod name="GoogleSignIn" spec="~> 6.2.0"/>
-        <pod name="GoogleUtilities" spec="~> 7.11.4"/>
+        <pod name="GoogleSignIn" spec="$GOOGLE_SIGN_IN_VERSION"/>
+        <pod name="GoogleUtilities" spec="$GOOGLE_UTILITIES_VERSION"/>
       </pods>
     </podspec>
 
-		<hook type="after_plugin_install" src="hooks/ios/prerequisites.js"/>
+    <hook type="after_plugin_install" src="hooks/ios/prerequisites.js"/>
   </platform>
 
   <!-- browser -->
