--- a/plugin.xml
+++ b/plugin.xml
@@ -120,15 +120,15 @@
     <framework src="libz.dylib" weak="true" />
 
     <!-- Google frameworks -->
-    <preference name="GOOGLE_SIGN_IN_VERSION" default="~> 7.1.0"/>
+<!--     <preference name="GOOGLE_SIGN_IN_VERSION" default="~> 7.1.0"/> -->
     <preference name="GOOGLE_UTILITIES_VERSION" default="~> 7.13.0"/>
     <podspec>
       <config>
         <source url="https://cdn.cocoapods.org/"/>
       </config>
       <pods use-frameworks="true">
-       <!-- <pod name="GoogleSignIn" spec="$GOOGLE_SIGN_IN_VERSION"/> -->
-        <pod name="GoogleUtilities" spec="$GOOGLE_UTILITIES_VERSION"/>
+       	<pod name="GoogleSignIn" spec="~> 7.0.0"/>
+        <!-- <pod name="GoogleUtilities" spec="$GOOGLE_UTILITIES_VERSION"/> -->
       </pods>
     </podspec>
 
