--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="cordova-plugin-googleplus"
-        version="8.5.6-firebasex18">
+        version="8.5.8">
 
   <name>Google SignIn</name>
   <description>Google Sign-In plugin compatível com FirebaseX 18+</description>
@@ -14,8 +14,9 @@
   </js-module>
 
   <engines>
-    <engine name="cordova" version=">=7.1.0"/>
-    <engine name="cordova-android" version=">=6.3.0"/>
+    <engine name="cordova" version=">=10.0.0"/>
+    <engine name="cordova-ios" version=">=6.0.0"/>
+    <engine name="cordova-android" version=">=10.0.0"/>
   </engines>
 
   <platform name="android">
@@ -32,77 +33,62 @@
     <source-file src="src/android/GooglePlus.java" target-dir="src/nl/xservices/plugins"/>
   </platform>
 
-  <!-- iOS Platform -->
-<platform name="ios">
+  <!-- iOS Platform - VERSÃO COMPATÍVEL COM FIREBASEX 18 -->
+  <platform name="ios">
+    <config-file target="config.xml" parent="/*">
+      <feature name="GooglePlus">
+        <param name="ios-package" value="GooglePlus" />
+      </feature>
+      <access origin="https://accounts.google.com/*" />
+    </config-file>
 
-  <config-file target="config.xml" parent="/*">
-    <feature name="GooglePlus">
-      <param name="ios-package" value="GooglePlus" />
-    </feature>
-    <access origin="https://accounts.google.com/*" />
-  </config-file>
+    <header-file src="src/ios/GooglePlus.h"/>
+    <source-file src="src/ios/GooglePlus.m"/>
 
-  <header-file src="src/ios/GooglePlus.h"/>
-  <source-file src="src/ios/GooglePlus.m"/>
+    <preference name="REVERSED_CLIENT_ID" />
 
-  <!-- Reverso do client ID -->
-  <preference name="REVERSED_CLIENT_ID" />
+    <!-- Configurações de URL Scheme -->
+    <config-file target="*-Info.plist" parent="CFBundleURLTypes">
+      <array>
+        <dict>
+          <key>CFBundleTypeRole</key>
+          <string>Editor</string>
+          <key>CFBundleURLName</key>
+          <string>REVERSED_CLIENT_ID</string>
+          <key>CFBundleURLSchemes</key>
+          <array>
+            <string>$REVERSED_CLIENT_ID</string>
+          </array>
+        </dict>
+      </array>
+    </config-file>
 
-  <config-file target="*-Info.plist" parent="CFBundleURLTypes">
-    <array>
-      <dict>
-        <key>CFBundleTypeRole</key>
-        <string>Editor</string>
-        <key>CFBundleURLName</key>
-        <string>REVERSED_CLIENT_ID</string>
-        <key>CFBundleURLSchemes</key>
-        <array>
-          <string>$REVERSED_CLIENT_ID</string>
-        </array>
-      </dict>
-    </array>
-  </config-file>
+    <config-file target="*-Info.plist" parent="LSApplicationQueriesSchemes">
+      <array>
+        <string>com.googleusercontent.apps</string>
+      </array>
+    </config-file>
 
-  <config-file target="*-Info.plist" parent="LSApplicationQueriesSchemes">
-    <array>
-      <string>com.googleusercontent.apps</string>
-    </array>
-  </config-file>
+    <!-- Configurações de entitlements -->
+    <config-file target="*-Debug.entitlements" parent="com.apple.developer.sso" merge="merge">
+      <array>
+        <string>com.google.sso</string>
+      </array>
+    </config-file>
+    <config-file target="*-Release.entitlements" parent="com.apple.developer.sso" merge="merge">
+      <array>
+        <string>com.google.sso</string>
+      </array>
+    </config-file>
 
-  <config-file target="*-Debug.entitlements" parent="com.apple.developer.sso" merge="merge">
-    <array>
-      <string>com.google.sso</string>
-    </array>
-  </config-file>
-  <config-file target="*-Release.entitlements" parent="com.apple.developer.sso" merge="merge">
-    <array>
-      <string>com.google.sso</string>
-    </array>
-  </config-file>
+    <!-- Dependências POD atualizadas para FirebaseX 18 -->
+    <!-- REMOVA TODOS OS <framework> E USE SOMENTE <pod> -->
+    <pod name="GoogleSignIn" spec="6.2.4" />
+    <pod name="GoogleUtilities/AppDelegateSwizzler" spec="7.11.0" />
+    <pod name="GoogleUtilities/UserDefaults" spec="7.11.0" />
+    <pod name="GTMSessionFetcher" spec="2.1.0" />
 
-  <config-file parent="keychain-access-groups" target="*/Entitlements-Debug.plist">
-    <array>
-      <string>$(AppIdentifierPrefix)$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-    </array>
-  </config-file>
-  <config-file parent="keychain-access-groups" target="*/Entitlements-Release.plist">
-    <array>
-      <string>$(AppIdentifierPrefix)$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-    </array>
-  </config-file>
-
-  <!-- Google SignIn Pods -->
-  <pod name="GoogleSignIn" spec="7.0.0" />
-  <pod name="GoogleUtilities" spec="~> 7.13.3" />
-  <pod name="GTMSessionFetcher" spec="~> 1.7" />
-
-  <!-- Frameworks necessários -->
-  <framework src="SafariServices.framework" />
-  <framework src="SystemConfiguration.framework" />
-  <framework src="CoreGraphics.framework" />
-  <framework src="UIKit.framework" />
-  <framework src="Foundation.framework" />
-</platform>
-
-
+    <!-- Adicione esta preferência para evitar conflitos -->
+    <preference name="GoogleSignInVersion" value="6.2.4" />
+  </platform>
 </plugin>
